rework  parsing of enum patterns to allow patterns in function calls (needed for EnumValue.match)